@@ -397,7 +397,10 @@ int main(int argc, const char * const argv[])
     }
     apr_pool_clear(plog);
     ap_run_open_logs(pconf, plog, ptemp, server_conf);
-    ap_run_post_config(pconf, plog, ptemp, server_conf);
+    if ( ap_run_post_config(pconf, plog, ptemp, server_conf) != OK) {
+        ap_log_error(APLOG_MARK, APLOG_STARTUP |APLOG_ERR| APLOG_NOERRNO, 0, NULL, "Configuration Failed\n");
+        destroy_and_exit_process(process, 1);
+    }
     apr_pool_destroy(ptemp);
 
     for (;;) {
@@ -423,7 +426,10 @@ int main(int argc, const char * const argv[])
         apr_sort_hooks();
 	apr_pool_clear(plog);
 	ap_run_open_logs(pconf, plog, ptemp, server_conf);
-	ap_run_post_config(pconf, plog, ptemp, server_conf);
+	if  (ap_run_post_config(pconf, plog, ptemp, server_conf) != OK) {
+            ap_log_error(APLOG_MARK, APLOG_STARTUP |APLOG_ERR | APLOG_NOERRNO, 0, NULL, "Configuration Failed\n");
+            destroy_and_exit_process(process, 1);
+        }
 	apr_pool_destroy(ptemp);
 	apr_pool_lock(pconf, 1);
 
